Initial basic styling

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dexie": "^3.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.1.0",
+    "styled-reset": "^4.1.4"
   },
   "scripts": {
     "start": "SET BROWSER=none&&react-scripts start",
